Move content up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,23 +16,22 @@ add_compile_definitions(
     GLM_FORCE_SIZE_T_LENGTH
 )
 
-add_subdirectory(${CMAKE_SOURCE_DIR}/extern/sdl EXCLUDE_FROM_ALL)
-add_subdirectory("${CMAKE_SOURCE_DIR}/extern/GLEW/build/cmake" "${CMAKE_CURRENT_BINARY_DIR}/GLEW")
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/extern/sdl EXCLUDE_FROM_ALL)
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/extern/GLEW/build/cmake" "${CMAKE_CURRENT_BINARY_DIR}/GLEW")
 
-add_subdirectory("${CMAKE_SOURCE_DIR}/extern/glm")
+add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/extern/glm")
 
 file(GLOB_RECURSE GAME_SOURCE src/*.cpp) 
 file(GLOB_RECURSE GAME_HEADERS src/*.hpp) 
 
 set(GAME_SOURCES
-    "${CMAKE_CURRENT_LIST_DIR}/main.cpp"
     ${GAME_SOURCE}
     ${GAME_HEADERS}
 )
 
 add_library(FOX_ENGINE_LIB ${GAME_SOURCES})
 
-target_include_directories(FOX_ENGINE_LIB PUBLIC "${CMAKE_SOURCE_DIR}" "${CMAKE_SOURCE_DIR}/src")
+target_include_directories(FOX_ENGINE_LIB PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/src")
 
 set(DEPEND_LIBRARIES
     SDL3::SDL3
@@ -41,9 +40,9 @@ set(DEPEND_LIBRARIES
     glew_s
 )
 
-target_link_libraries(FOX_ENGINE_LIB PRIVATE ${DEPEND_LIBRARIES})
+target_link_libraries(FOX_ENGINE_LIB PUBLIC ${DEPEND_LIBRARIES})
 
-target_precompile_headers(FOX_ENGINE_LIB PRIVATE "${CMAKE_SOURCE_DIR}/pch.hpp")
+target_precompile_headers(FOX_ENGINE_LIB PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/pch.hpp")
 
 install(TARGETS FOX_ENGINE_LIB
         EXPORT FOX_ENGINE_LIB_TARGET
